# ipcheck

./: README.md
host/: Cargo.toml  build.rs  input.txt  main.rs
impls/: README.md
impls/IPNet/: Program.cs
impls/dotnet/: IPCheck.cs
impls/go/: ipcheck.go
impls/ip-rust/: Cargo.toml  main.rs
impls/java/: IPCheck.java  pom.xml
impls/python/: ipcheck.py
impls/rust/: Cargo.toml  main.rs
